Add more info about logging