@@ -12,8 +12,37 @@ It can be useful to trace the communications between VS Code and the Java Langua
 - `verbose` : logs **JSON** messages exchanged between VS Code and the java server
 
 ### Get the vscode-java logs
+When the Java extension fails to start, the first thing to look at is the VS Code console. 
+
+- Open the command palette (`F1`)
+- select `Developer: Toggle Developer Tools`
+
+The chrome developer tools will open. In the console tab, you will find messages like: 
+
+```
+stderr: Mar 30, 2017 3:54:00 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
+WARNING: Unsupported notification method: $/setTraceNotification
+vscode-icons is active!
+Executing /Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home/bin/java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1044 --add-modules=ALL-SYSTEM 
+--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED 
+-Declipse.application=org.eclipse.jdt.ls.core.id1 -Dosgi.bundles.defaultStartLevel=4 
+-Declipse.product=org.eclipse.jdt.ls.core.product -Dlog.protocol=true -Dlog.level=ALL 
+-noverify -Xmx1G -make.it.crash -jar /Users/fbricon/Dev/projects/vscode-java/server/plugins/org.eclipse.equinox.launcher_1.4.0.v20161219-1356.jar 
+-configuration /Users/fbricon/Dev/projects/vscode-java/server/config_mac 
+-data /Users/fbricon/Library/Application Support/Code/User/workspaceStorage/bdea6df99b92680f795ba5759e96cfc4/redhat.java/jdt_ws
+View server logs at /Users/fbricon/Library/Application Support/Code/User/workspaceStorage/bdea6df99b92680f795ba5759e96cfc4/redhat.java/jdt_ws/.metadata/plugins/.log
+stderr: Unrecognized option: -make.it.crash
+Error: Could not create the Java Virtual Machine.
+Error: A fatal exception has occurred. Program will exit.
+```
 
 ### Get the Java Language Server's workspace logs
+The VS Code console logs above also display the path the the server logs, that might contain other informations:
+
+```
+View server logs at /Users/fbricon/Library/Application Support/Code/User/workspaceStorage/bdea6df99b92680f795ba5759e96cfc4/redhat.java/jdt_ws/.metadata/plugins/.log
+```
+
 
 ## Clean the workspace directory
 In some occasions, deleting the Java Language Server workspace directory is helpful to go back to a clean slate.
